--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
 .App {
   text-align: center;
+  /* padding-left: 20px;
+  padding-right: 20px; */
+  background-color: #f8f3e4;
+  height: 1500px;
+  color: #122620;
 }
 
 .App-logo {
-  height: 5vmin;
+  height: 4vmin;
   pointer-events: none;
 }
 
@@ -39,9 +44,12 @@
 
 
 nav {
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: space-between;
-
+  background-color: rgb(192, 119, 23);
+  color: whitesmoke;
 }
 
 nav ul {
@@ -49,6 +57,7 @@ nav ul {
  list-style-type: none;
  display: flex;
  justify-content: start;
+ align-items: center;
  padding: 0;
 }
 
@@ -67,6 +76,7 @@ nav ul li {
 header caption {
   width: 400px;
   font-size: 30px;
+  margin: 20px;
 }
 
 main {
@@ -82,6 +92,18 @@ main {
 
 #balance {
   grid-area: balance;
+  background-color: #fbfbfb;
+  border-radius: 1em;
+  box-shadow: 0px 1px 5px #b3b3b3;
+  margin-left: 30px;
+}
+
+#balance h1 {
+  font-size: 25px;
+}
+
+#balance p {
+  font-size: 20px;
 }
 
 #actions {
@@ -99,22 +121,106 @@ main {
   grid-area: recent;
 }
 
+
+#actions div{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+#actions div div{
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  background-color: #122620;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #send {
   grid-area: send;
+}
+
+#senddiv img {
+  height: 20px;
 }
 
 #request {
   grid-area: request;
 }
 
+#requestdiv img {
+  height: 20px;
+}
+
 #link{
   grid-area: link;
+}
+
+#bankdiv img {
+  height: 20px;
 }
 
 #withdraw {
   grid-area: withdraw;
 }
 
+#withdrawdiv img {
+  height: 20px;
+}
+
 #deposit {
   grid-area: deposit;
+}
+
+#depositdiv img {
+  height: 20px;
+}
+
+#gennav li {
+  margin:0 ;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#dashboard{
+  height: 2.5em;
+  width: 6em;
+  border: 1px solid;
+  border-radius: 1em;
+  color: #61DBFB;
+}
+
+#lognav {
+  margin: 0;
+  margin-right: 10px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+
+#lognav li {
+  margin: 6px;
+  margin-right: 7px;
+  display: flex;
+  align-items: center;
+}
+
+#logout{
+  padding-left: 10px;
+}
+
+#settings {
+  height: 23px;
+}
+
+#notification {
+  height: 25px;
 }
