--- a/src/App.css
+++ b/src/App.css
@@ -224,3 +224,84 @@ main {
 #notification {
   height: 25px;
 }
+
+#overlay {
+  position: fixed;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#overlay.visible {
+  visibility: visible;
+}
+
+#overlay.hidden {
+  visibility: hidden;
+}
+
+.popup {
+  z-index: 10;
+  color: black;
+  height: 600px;
+  width: 500px;
+  background-color: white;
+  border-radius:1em ;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
+}
+
+#popupButtons button {
+  height: 50px;
+  width: 120px;
+  border: none;
+  border-radius: 0.2em;
+  color: white;
+  margin-bottom: 40px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+#cancelButton {
+  background-color: rgb(184, 29, 29);
+
+}
+
+#submitButton {
+  background-color: rgb(24, 92, 18);
+}
+
+#popupInputs {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+#popupInputs input {
+  width: 380px;
+  height: 50px;
+  padding-left: 10px;
+}
+
+#popupInputs label {
+  position: relative;
+  right: 20px;
+  font-weight: bold;
+  font-size: 15px;
+  margin-bottom: 10px;
+}
+
+#popupInputs div {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin-bottom: 30px;
+}
