--- a/src/App.css
+++ b/src/App.css
@@ -408,8 +408,8 @@ main {
   display: flex;
   flex-direction: column;
   color: black;
-  height: 600px;
-  width: 500px;
+  height:580px;
+  width: 480px;
   background-color: white;
   border-radius: 1em ;
   box-shadow: 0px 1px 5px #b3b3b3;
@@ -434,12 +434,8 @@ main {
   margin-right: 2em;
 }
 
-/* #newNameInput{
-  margin-top: 10px;
-} */
-
 #signupdiv input{
-  width: 300px;
+  width: 340px;
   height: 50px;
   padding-left: 10px;
   margin-top: 15px;
@@ -452,20 +448,27 @@ main {
 }
 
 #signupdiv #newNameInput input {
-  width: 137px;
+  width: 157px;
   margin-left: 5px;
   margin-right: 5px;
 }
 
 #signupReminder {
-  width: 315px;
+  width: 355px;
   font-size: 10px;
   text-align: left;
+  margin-bottom: 10px;
 }
 
-#createAccount button{
+#createAccount {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#createButton {
   height: 50px;
-  width: 320px;
+  width: 355px;
   border: none;
   border-radius: 0.2em;
   color: white;
@@ -473,4 +476,12 @@ main {
   margin-left: 5px;  
   margin-right: 5px;
   background-color: #0d3ea8f8;
+}
+
+#backlogin {
+  color: #0d3ea8f8;
+  width: 100px;
+  height: 30px;
+  border: none;
+  background-color: transparent;
 }
