--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,9 @@ main {
   "balance balance actions actions"
   "recent recent recent recent"
   "recent recent recent recent";
+  margin-left: 50px;
+  margin-right: 50px;
+
 }
 
 #balance {
@@ -111,7 +114,9 @@ main {
   background-color: #fbfbfb;
   border-radius: 1em;
   box-shadow: 0px 1px 5px #b3b3b3;
-  margin-left: 30px;
+  width: 400px;
+  height: 500px;
+
 }
 
 #balance h1 {
@@ -130,6 +135,8 @@ main {
   grid-template-areas:
   "send deposit"
   "link withdraw";
+  width: 400px;
+  height: 500px;
 }
 
 /* recentActivity */
@@ -139,16 +146,15 @@ main {
 
 #recentActivites{
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
 }
  
 .transactionRecord {
   display: flex;
   flex-direction: column;
   text-align: left;
-  border: solid;
-  margin: 10px;
-  padding: 10px;
+  border-top: transparent;
+  border-bottom:  0.5px solid #282c347e;
 }
 
 /* actions */
