--- a/src/App.css
+++ b/src/App.css
@@ -731,7 +731,7 @@ div#linkBankReminder {
   height: fit-content;
 }
 
-#employeePopupWithdraw{
+#employeePopupWithdraw, #employeePopupDeposit{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
@@ -741,7 +741,7 @@ div#linkBankReminder {
   "wleft wleft wright wright";
 }
 
-#withdrawInputDiv {
+#withdrawInputDiv, #depositInputs {
   grid-area: wleft;
   display: flex;
   flex-direction: column;
@@ -750,14 +750,14 @@ div#linkBankReminder {
   margin: 0;
 }
 
-#withdrawInputDiv input{
+#withdrawInputDiv input, #depositInputs input{
   padding-left: 7px;
   width: 300px;
   height: 35px;
   margin: 5px;
 }
 
-#withdrawUserInfo{
+#withdrawUserInfo, #depositInfo{
   grid-area: wright;
   width: fit-content;
   display: flex;
@@ -766,7 +766,7 @@ div#linkBankReminder {
   justify-content: flex-start;
 }
 
-#withdrawUserInfo input{
+#withdrawUserInfo input, #depositInfo input{
   padding-left: 7px;
   width: 300px;
   height: 35px;
@@ -774,13 +774,89 @@ div#linkBankReminder {
   background-color: rgb(223, 223, 223);
 }
 
-#withdrawHeader{
+#withdrawHeader, #depositHeader{
   grid-area: wheader;
   display: flex;
   justify-content: center;
-  margin-right: 150px;
+  align-items: center;
 }
 
-#withdrawX {
+#withdrawX, #depositX {
   grid-area: wx;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#employeePopupTransfer{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-areas: 
+  "theader theader theader tx"
+  "tleft tleft ttop ttop"
+  "tleft tleft tbottom tbottom";
+}
+
+#transferInputs {
+  grid-area: tleft;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: fit-content;
+  margin: 0;
+}
+
+#transferInputs input {
+  padding-left: 7px;
+  width: 300px;
+  height: 35px;
+  margin: 5px;
+}
+
+#transferInfoFrom{
+  grid-area: ttop;
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin-bottom: 20px;
+}
+#transferInfoFrom input {
+  padding-left: 7px;
+  width: 300px;
+  height: 35px;
+  margin: 5px;
+  background-color: rgb(223, 223, 223);
+}
+
+#transferInfoTo{
+  grid-area: tbottom;
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+#transferInfoTo input {
+  padding-left: 7px;
+  width: 300px;
+  height: 35px;
+  margin: 5px;
+  background-color: rgb(223, 223, 223);
+}
+
+#transferHeader{
+  grid-area: theader;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#transferX {
+  grid-area: tx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
