--- a/src/App.css
+++ b/src/App.css
@@ -685,6 +685,7 @@ div#linkBankReminder {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  min-height: 1600px;
 }
 
 #employeeMainTop {
@@ -710,16 +711,19 @@ div#linkBankReminder {
   font-weight: bolder;
   border-bottom: transparent;
   border-left: transparent;
+  box-shadow: -2px 0px 5px rgb(7, 7, 77);;
 
 }
 
 #employeePopupPane {
-  width: 100%;
-  height: 50vmin;
-  background-color: gray;
+  width: 86%;
+  height: 45vmin;
   bottom: 10px;
   display: flex;
   justify-content: center;
+  border: 1px solid;
+  border-radius: 0.6em;
+  background-color:#ffffff ;
 }
 
 #employeePopupWithdraw, #employeePopupDeposit{
@@ -842,8 +846,7 @@ div#linkBankReminder {
   grid-area: theader;
   display: flex;
   align-items: center;
-  justify-content: center;
-}
+  justify-content: center;}
 
 #transferX {
   grid-area: tx;
@@ -854,7 +857,7 @@ div#linkBankReminder {
 
 /* adduser */
 
-#addUserForm {
+#addUserForm{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
@@ -869,23 +872,88 @@ div#linkBankReminder {
   flex-direction: column;
   align-items: center;
 }
-#addUserInputs input  {
+#addUserInputs input {
   padding-left: 7px;
   width: 300px;
   height: 35px;
   margin: 5px;
 }
 
-#addUserHeader {
+#addUserHeader{
   grid-area: auheader;
   display: flex;
   justify-content: center;
   align-items: center; 
 }
 
-#auX{
+#auX {
   grid-area: aux;
 }
+
+#deleteUser, #editUser {
+  display: flex;
+  flex-direction: row;
+}
+
+#deleteUserHeader, #editUserHeader {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#deleteUserX, #editUserX{
+  align-self: flex-end;
+}
+
+#deleteUserReminder, #editUserReminder{
+  height: 20px;
+  color: rgb(133, 4, 4);
+}
+
+#deleteUserInputs, #editUserInputs {
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+}
+
+#deleteUserInputs input,  #editUserInputs input{
+  width:300px;
+  height: 40px;
+  padding-left: 7px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+#deleteUserInputs button, #editUserInputs button {
+  width: 313px;
+  height: 40px;
+}
+
+#deleteUserInfo, #editUserInfo {
+  display: flex;
+  flex-direction: column;
+}
+
+#deleteUserInfo input, #editUserInfo input{
+  width:300px;
+  height: 40px;
+  padding-left: 7px;
+  margin: 5px;
+}
+
+#deleteUserInfo input {
+  background-color: rgb(223, 223, 223);
+}
+
+#editUsername {
+  background-color: rgb(223, 223, 223);
+}
+
+
+
+
+
 
 
 
