--- a/src/App.css
+++ b/src/App.css
@@ -738,22 +738,32 @@ div#linkBankReminder {
 }
 
 #employeePopupWithdraw, #employeePopupDeposit{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-template-areas: 
-  "wheader wheader wheader wx"
-  "wleft wleft wright wright"
-  "wleft wleft wright wright";
+  display: flex;
+  flex-direction: column;
+
+}
+
+#withdrawHeader, #depositHeader{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#withdrawReminder, #depositReminder {
+  height: 50px;
+}
+
+#withdrawMain, #depositMain {
+  display: flex;
 }
 
 #withdrawInputDiv, #depositInputs {
-  grid-area: wleft;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: fit-content;
-  margin: 0;
+  margin-right: 20px;
 }
 
 #withdrawInputDiv input, #depositInputs input{
@@ -764,7 +774,6 @@ div#linkBankReminder {
 }
 
 #withdrawUserInfo, #depositInfo{
-  grid-area: wright;
   width: fit-content;
   display: flex;
   flex-direction: column;
@@ -780,18 +789,18 @@ div#linkBankReminder {
   background-color: rgb(223, 223, 223);
 }
 
-#withdrawHeader, #depositHeader{
-  grid-area: wheader;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 #withdrawX, #depositX {
   grid-area: wx;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+#withdrawInputDiv button, #depositInputs button {
+  width: 313px;
+  height: 40px;
+  background-color: #04246c;
+  color: white;
 }
 
 #employeePopupTransfer{
@@ -892,7 +901,7 @@ div#linkBankReminder {
 }
 
 #addUserReminder{
-  height: 10px;
+  height: 50px;
 }
 
 #addUserInputs {
