--- a/src/App.css
+++ b/src/App.css
@@ -1114,3 +1114,17 @@ footer {
   margin-top: 20px;
   padding-bottom: 20px;
 }
+
+.budgetItem {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.deleteButton {
+  background-image: url("img/trash.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 25px;
+  width: 20px;
+}
